--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
