--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
-    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
@@ -69,6 +69,8 @@ dependencies {
     implementation "org.kodein.di:kodein-di-generic-jvm:5.2.0"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
+
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
